<resources>
    <string name="app_name">Groupay</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_loggedin">LoggedinActivity</string>
    <string name="title_activity_group">GroupActivity</string>

    <string name="application">Group Pay</string>
    <string name="caption_welcome">Welcome to Group Pay!!Register or Login.</string>
    <string name="facebook_app_id">REMOVED FOR SECURITY ISSUES</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="btnCreate">Create Group</string>

    <string name="exitGroup">Exit Group</string>
    <string name="createEvent">Create Event</string>

    <string name="totalDue">Total Due</string>
    <string name="amount">Amount</string>
    <string name="pay">Pay</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="payments">
        <item>05/14/2015 |                          $20 (Paid)</item>
        <item>05/20/2015 | $20 (Unpaid)</item>
    </string-array>
    <string-array name="frequency">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="nav_drawer_items">
        <item>My Groups</item>
        <item>All Groups</item>
        <item>Notifications</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/my_group</item>
        <item>@drawable/all_group</item>
        <item>@drawable/notification</item>
    </array>
    <string name="latestGroups">Latest Groups</string>
    <string-array name="frequency_type">
        <item>Week</item>
        <item>Month</item>
    </string-array>
    <string name="title_activity_all_groups">AllGroupsActivity</string>
</resources>
