<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ours.team20.com.groupay.groupfragments.PaymentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:background="#dc3a2c">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:orientation="horizontal">

                <TextView android:text="@string/totalDue"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="#e2d3d2"
                    android:layout_marginLeft="8dp"
                    android:textStyle="normal"
                    android:textSize="20dp"
                    />
                <EditText
                    android:id="@+id/total_due"
                    android:layout_width="100dp"
                    android:layout_gravity="center"
                    android:layout_height="50dp"
                    android:textColor="#939393"
                    android:background="#ffcdd2"
                    android:layout_marginLeft="10dp"
                    android:hint="Due"
                    android:text="$25"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/image_separator"
                android:layout_width="1dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                android:src="@drawable/separator" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView android:text="@string/amount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"

                        android:gravity="center"
                        android:textColor="#e2d3d2"
                        android:textStyle="normal"
                        android:textSize="20dp"
                        />

                    <EditText
                        android:id="@+id/amount"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_height="32dp"
                        android:textColor="#939393"
                        android:background="#ffcdd2"
                        android:layout_marginRight="10dp"
                        android:hint="amount"/>

                </LinearLayout>

                <Button
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/pay"
                    android:textColor="#e2d3d2"
                    android:textSize="@dimen/abc_text_size_large_material"
                    android:background="@color/accent_material_light"
                    style="?android:attr/buttonBarStyle"
                    android:layout_gravity="right"
                    android:layout_marginBottom="10dp" />

            </LinearLayout>

        </LinearLayout>

        <ListView
            android:entries="@array/payments"
            android:layout_width="match_parent"
            android:layout_weight="8"
            android:layout_height="0dp" />
    </LinearLayout>
</FrameLayout>
